--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY="AIzaSyB8yf_8EiJXuv1FFBkxVyWc5KfC6rstmoU"
-REACT_APP_AUTH_DOMAIN="l1ve-76b63.firebaseapp.com"
-REACT_APP_PROJECT_ID="l1ve-76b63"
-REACT_APP_STORAGE_BUCKET="l1ve-76b63.firebasestorage.app"
-REACT_APP_MESSAGING_SENDER_ID="487789435083"
-REACT_APP_APP_ID="1:487789435083:web:4e955ad0dd592f9132634e"
-REACT_APP_MEASUREMENT_ID="G-DQSYRERMWH"
+REACT_APP_API_KEY="##############"
+REACT_APP_AUTH_DOMAIN="##############"
+REACT_APP_PROJECT_ID="##############"
+REACT_APP_STORAGE_BUCKET="##############"
+REACT_APP_MESSAGING_SENDER_ID="##############"
+REACT_APP_APP_ID="1:487789435083:web:##############"
+REACT_APP_MEASUREMENT_ID="##############"
